--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.19.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
